objects/ASI_HK_CRM_SubBrand_Investment_Benchmark__c.object
<CustomObject>
    <description>ASI HK CRM - PAF Sub-Brand Investment Benchmark - Used to capture the Investment % value for each Sub-Brand by Local Channel</description>
    <fields>
        <fullName>ASI_HK_CRM_Benchmark_Percent__c</fullName>
        <label>Benchmark %</label>
        <precision>4</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_INV_Benchmark_Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Populated by workflow rule: Concat Sub-Brand and Local Channel</description>
        <label>INV Benchmark Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Local_Channel__c</fullName>
        <description>ASI HK CRM - Local Channel</description>
        <label>Local Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>F10 - Wholesalers - Off</fullName>
                </value>
                <value>
                    <fullName>F11 - Dealers</fullName>
                </value>
                <value>
                    <fullName>F12 - Japanese Store</fullName>
                </value>
                <value>
                    <fullName>F14 - Other General Trade</fullName>
                </value>
                <value>
                    <fullName>F3 - Supermarket Chain</fullName>
                </value>
                <value>
                    <fullName>F5 - Modern Wine Shop</fullName>
                </value>
                <value>
                    <fullName>N1 - Chinese Restaurant</fullName>
                </value>
                <value>
                    <fullName>N11 - Chinese Rest - Maxim&apos;s</fullName>
                </value>
                <value>
                    <fullName>N3 - Hotels/ Membership Club</fullName>
                </value>
                <value>
                    <fullName>N5 - Modern On Trade</fullName>
                </value>
                <value>
                    <fullName>N6 - Wholesalers - On</fullName>
                </value>
                <value>
                    <fullName>N7 - Traditional On Trade</fullName>
                </value>
                <value>
                    <fullName>P1 - P2/3 Customers (indirect)</fullName>
                </value>
                <value>
                    <fullName>ST - Staff Purchases</fullName>
                </value>
                <value>
                    <fullName>T10 - DF Sales - HK</fullName>
                </value>
                <value>
                    <fullName>T11 - DP Sales - Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Sub_Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to HK MFM Sub-brand</description>
        <label>Sub-Brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>PAF Sub-Brand Investment Benchmarks</relationshipLabel>
        <relationshipName>PAF_Sub_Brand_Investment_Benchmarks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>PAF Sub-Brand Investment Benchmark</label>
    <listViews>
        <fullName>ASI_HK_CRM_ALL_PAF_INV_Benchmarks</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Sub_Brand__c</columns>
        <columns>ASI_HK_CRM_Local_Channel__c</columns>
        <columns>ASI_HK_CRM_Benchmark_Percent__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>ASI_HK_CRM_INV_Benchmark_Unique_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_SubBrand_Investment_Benchmark__c.ASI_HK_CRM_PAF_Sub_Brand_Inv</value>
        </filters>
        <label>All ASI HK CRM - PAF INV Benchmarks</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_HK_CRM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_HK_CRM_Local_Channel__c</columns>
        <columns>ASI_HK_CRM_Sub_Brand__c</columns>
        <columns>ASI_HK_CRM_Benchmark_Percent__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_ASI_HK_CRM_PAF_INV_Benchmarks</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Sub_Brand__c</columns>
        <columns>ASI_HK_CRM_Local_Channel__c</columns>
        <columns>ASI_HK_CRM_Benchmark_Percent__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>ASI_HK_CRM_INV_Benchmark_Unique_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_SubBrand_Investment_Benchmark__c.ASI_HK_CRM_PAF_Sub_Brand_Inv</value>
        </filters>
        <label>All ASI HK CRM - PAF INV Benchmarks</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_HK_CRM</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SIB-{000000}</displayFormat>
        <label>PAF Sub-Brand Investment Benchmark</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAF Sub-Brand Investment Benchmarks</pluralLabel>
    <recordTypes>
        <fullName>ASI_HK_CRM_PAF_Sub_Brand_Inv</fullName>
        <active>true</active>
        <label>PAF Sub-Brand INV Benchmark (HK)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>